# rust-fullstack-example

./: .gitignore  Cargo.toml  README.md  db.sql  docker-compose.yml
backend/: Cargo.toml  db.sql
backend/src/: error.rs  handler.rs  main.rs
backend/src/db/: mod.rs  owner.rs  pet.rs
common/: Cargo.toml
common/src/: lib.rs
frontend/: Cargo.toml  Makefile  index.html
frontend/src/: lib.rs
frontend/src/owner/: create.rs  detail.rs  list.rs  mod.rs
frontend/src/pet/: create.rs
frontend/src/todo/: detail.rs  list.rs
src/: data.rs  db.rs  error.rs  handler.rs  main.rs
src/db/: owner.rs  pet.rs
