[package]
name = "warp-postgres-example"
version = "0.1.0"
authors = ["Mario Zupan <mario@zupzup.org>"]
edition = "2018"

[dependencies]
tokio = { version = "0.2", features = ["macros"] }
warp = "0.2"
mobc-postgres = { version = "0.5.0", features = ["with-chrono-0_4"] }
mobc = "0.5.7"
serde = {version = "1.0.104", features = ["derive"] }
serde_derive = "1.0.104"
serde_json = "1.0.51"
thiserror = "1.0.11"
chrono = { version = "0.4.11", features = ["serde"] }

[profile.dev]
debug = 0

